--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-future==0.18.2
-MarkupSafe==1.1.1
-matplotlib==3.1.3
-numpy==1.16.0
+matplotlib>=3.1.3
+numpy>=1.16.0
 Pillow>=8.1.1
-protobuf==3.11.3
 pyparsing==2.4.6
 python-dateutil==2.8.1
 six==1.14.0
